--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "week06",
+  "homepage": "https://syuuuu.github.io/SyuYJ/",
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
