--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "devDependencies": {},
   "scripts": {
++   "predeploy": "npm run build",
++   "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
